--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,8 @@
     		<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core</artifactId>
-				<version>3.1.0.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
