--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=9090
+server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/aula
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.datasource.username=guilherme
 spring.datasource.password=crashb18
