Fixed file structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
-spring.datasource.username=guilherme
-spring.datasource.password=crashb18
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-api
+spring.datasource.username=postgres
+spring.datasource.password=123456
